fix linter